# idcurl

./: Cargo.toml  LICENSE  README.md
examples/: get.rs  post.rs  user_agent.rs
src/: client.rs  error.rs  headers.rs  into_url.rs  lib.rs  method.rs  request.rs  response.rs
tests/: basic.rs
