[package]
name = "idcurl"
version = "0.1.0"
authors = ["Kalle Samuels <ks@ks.ax>"]
edition = "2018"
description = "Sychronous idiomatic http client based on curl"
keywords = ["http", "client", "curl", "sync"]
documentation = "https://docs.rs/idcurl/"


[dependencies]
curl-sys={version="0.4" }
url="1.7"
http="0.1"
libc="0.2.42"
